src/test/deca/syntax/invalid/special_char_wrong.deca
// Description:
//    enchaînement faux de caractères spéciaux
//
// Resultats:
//    Ligne 12 : Erreur lexicale.
//
// Historique:
//    cree le 09/01/2023
//

// normal cases
&&&